[project]
name = "subtitles-tools"
version = "0.1.0"
description = "Jellyfin 字幕增强插件的迅雷字幕服务端"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
]

[project.scripts]
subtitles-tools = "subtitles_tools.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
